--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
     - name: Hello world action step
       id: hello
-      uses: nicolaferraro/camel-k-github-action@v1
+      uses: nicolaferraro/camel-k-github-action@master
       with:
         who-to-greet: 'Mona the Octocat'
     # Use the output from the `hello` step
