--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,15 +1,9 @@
 on: [push]
 
 jobs:
-  hello_world_job:
+  playground_test:
     runs-on: ubuntu-latest
-    name: A job to say hello
+    name: Test Camel K Playground
     steps:
-    - name: Hello world action step
-      id: hello
+    - name: Setup Camel K
       uses: nicolaferraro/camel-k-github-action@master
-      with:
-        who-to-greet: 'Mona the Octocat'
-    # Use the output from the `hello` step
-    - name: Get the output time
-      run: echo "The time was ${{ steps.hello.outputs.time }}"
