--- a/action.yml
+++ b/action.yml
@@ -1,13 +1,5 @@
-name: 'Hello World'
-description: 'Greet someone and record the time'
-inputs:
-  who-to-greet:  # id of input
-    description: 'Who to greet'
-    required: true
-    default: 'World'
-outputs:
-  time: # id of output
-    description: 'The time we greeted you'
+name: 'Camel K'
+description: 'Creates a Kubernetes Playground for running Camel K integrations'
 runs:
   using: 'node12'
   main: 'index.js'
