--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/nicolaferraro/camel-k-github-action#readme",
   "dependencies": {
     "@actions/core": "^1.2.0",
+    "@actions/exec": "^1.0.2",
     "@actions/github": "^2.0.0"
   }
 }
