--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,8 @@ jobs:
     steps:
     - name: Setup Camel K Playground
       uses: nicolaferraro/camel-k-github-action@master
+      with:
+          clusterType: openshift
     - name: Checkout code
       uses: actions/checkout@v1
     - name: Test Integration
