--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,7 @@ jobs:
         do
           echo "Waiting for integration to start"
           kubectl get pod
+          kubectl logs -l camel.apache.org/component=operator --tail 30
           sleep 5
         done
         echo "Integration started!"
