--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,7 @@ jobs:
     - name: check
       run: |
         cat /etc/resolv.conf 
+        cat /run/systemd/resolve/stub-resolv.conf
     - name: Setup Camel K Playground
       uses: nicolaferraro/camel-k-github-action@dev
       with:
