--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,7 @@ jobs:
       run: |
         cat /etc/resolv.conf 
         cat /run/systemd/resolve/stub-resolv.conf
+        cat /etc/systemd/resolved.conf
     - name: Setup Camel K Playground
       uses: nicolaferraro/camel-k-github-action@dev
       with:
