--- a/action/package.json
+++ b/action/package.json
@@ -23,6 +23,7 @@
     "@actions/github": "^2.0.0",
     "@actions/io": "^1.0.1",
     "@actions/tool-cache": "^1.1.2",
+    "axios": "^0.19.0",
     "fs": "0.0.1-security",
     "path": "^0.12.7",
     "util": "^0.12.1"
