--- a/.github/workflows/openshift.yml
+++ b/.github/workflows/openshift.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Setup Camel K Playground
-      uses: nicolaferraro/camel-k-github-action/action@dev
+      uses: nicolaferraro/camel-k-github-action/action@dev2
       with:
         cluster: openshift
     - name: Checkout code
